# qdrant-cpp-client

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
qdrant/: qdrant_client.cc  qdrant_client.h  qdrant_client_compile_test.cc
qdrant/proto/: README.md  qdrant_messages.proto  qdrant_service.proto
